--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
                 <button id="new-project-btn"><span class="material-symbols-outlined">add</span></button>
             </div>
             <div id="project-list">
-                <div>
+                <div class="project">
                     <h3>Family</h3>
                     <ul>
                         <li>Visit Family</li>
                     </ul>
                 </div>
-                <div>
+                <div class="project">
                     <h3>Work</h3>
                 </div>
-                <div>
+                <div class="project">
                     <h3>Hobbies</h3>
                 </div>
             </div>
